homework/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profile-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/ushakov($|/)(.*)
            pathType: Prefix
            backend:
              service:
                name: profile-app-service
                port:
                  number: 9000
